@@ -1,34 +1,38 @@
 package io.codemodder.providers.sarif.semgrep;
 
+import static java.util.stream.Collectors.*;
+
 import com.contrastsecurity.sarif.SarifSchema210;
 import com.google.inject.AbstractModule;
 import io.codemodder.CodeChanger;
 import io.codemodder.RuleSarif;
+import io.github.classgraph.*;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.lang.reflect.Constructor;
+import java.lang.reflect.Executable;
 import java.lang.reflect.Parameter;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import javax.inject.Inject;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.annotations.VisibleForTesting;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /** Responsible for binding Semgrep-related things. */
-final class SemgrepModule extends AbstractModule {
+public final class SemgrepModule extends AbstractModule {
 
   private final List<Class<? extends CodeChanger>> codemodTypes;
   private final Path codeDirectory;
 
-  SemgrepModule(final Path codeDirectory, final List<Class<? extends CodeChanger>> codemodTypes) {
+  public SemgrepModule(
+      final Path codeDirectory, final List<Class<? extends CodeChanger>> codemodTypes) {
     this.codemodTypes = Objects.requireNonNull(codemodTypes);
     this.codeDirectory = Objects.requireNonNull(codeDirectory);
   }
@@ -46,81 +50,91 @@ final class SemgrepModule extends AbstractModule {
     // find all @SemgrepScan annotations in their parameters and batch them up for running
     List<Pair<String, SemgrepScan>> toBind = new ArrayList<>();
 
+    Set<String> packagesScanned = new HashSet<>();
+
     for (Class<? extends CodeChanger> codemodType : codemodTypes) {
-      // find all constructors that are marked with @Inject
-      Constructor<?>[] constructors = codemodType.getDeclaredConstructors();
-      List<Constructor<?>> injectableConstructors =
-          Arrays.stream(constructors)
-              .filter(constructor -> constructor.getAnnotation(javax.inject.Inject.class) != null)
-              .collect(Collectors.toUnmodifiableList());
 
-      List<Parameter> parameters =
-          injectableConstructors.stream()
-              .flatMap(constructor -> Stream.of(constructor.getParameters()))
-              .filter(parameter -> parameter.getAnnotation(SemgrepScan.class) != null)
-              .collect(Collectors.toUnmodifiableList());
+      String packageName = codemodType.getPackageName();
+      if (!packagesScanned.contains(packageName)) {
+        ScanResult scan =
+            new ClassGraph().enableAllInfo().acceptPackagesNonRecursive(packageName).scan();
+        ClassInfoList classesWithMethodAnnotation =
+            scan.getClassesWithMethodAnnotation(Inject.class);
+        List<Class<?>> injectableClasses = classesWithMethodAnnotation.loadClasses();
 
-      parameters.forEach(
-          parameter -> {
-            SemgrepScan semgrepScanAnnotation = parameter.getAnnotation(SemgrepScan.class);
-            if (!RuleSarif.class.equals(parameter.getType())) {
-              throw new IllegalArgumentException(
-                  "Can only inject semgrep results into "
-                      + RuleSarif.class.getSimpleName()
-                      + " types: "
-                      + codemodType.getName());
-            }
-            String yamlPath = semgrepScanAnnotation.pathToYaml();
-            String declaredRuleId = semgrepScanAnnotation.ruleId();
-            Path yamlPathToWrite = null;
-            boolean foundYaml = false;
-            if (!declaredRuleId.isEmpty()) {
-              String classpathYamlPath =
-                  "/"
-                      + codemodType.getPackageName().replace(".", "/")
-                      + "/"
-                      + declaredRuleId
-                      + ".yaml";
+        List<Parameter> targetedParams =
+            injectableClasses.stream()
+                .map(Class::getDeclaredConstructors)
+                .flatMap(Arrays::stream)
+                .filter(constructor -> constructor.isAnnotationPresent(Inject.class))
+                .map(Executable::getParameters)
+                .flatMap(Arrays::stream)
+                .filter(param -> param.isAnnotationPresent(SemgrepScan.class))
+                .collect(toList());
 
-              if (!"".equals(yamlPath)) {
-                classpathYamlPath = yamlPath;
-              }
-              Optional<Path> path = saveClasspathResourceToTemp(classpathYamlPath);
-              if (path.isPresent()) {
-                foundYaml = true;
-                yamlPathToWrite = path.get();
-              }
-            }
-            String inlineYaml = semgrepScanAnnotation.yaml();
-            if (!"".equals(inlineYaml)) {
-              if (foundYaml) {
+        targetedParams.forEach(
+            param -> {
+              if (!RuleSarif.class.equals(param.getType())) {
                 throw new IllegalArgumentException(
-                    "Cannot specify both inline yaml and yaml file path: " + codemodType.getName());
+                    "can't use @SemgrepScan on anything except RuleSarif (see "
+                        + param.getDeclaringExecutable().getDeclaringClass().getName()
+                        + ")");
               }
-              foundYaml = true;
-              yamlPathToWrite = saveStringToTemp(inlineYaml);
-            }
 
-            if (!foundYaml) {
-              throw new IllegalArgumentException(
-                  "no semgrep yaml found for: " + codemodType.getName());
-            }
+              SemgrepScan semgrepScan = param.getAnnotation(SemgrepScan.class);
+              String yamlPath = semgrepScan.pathToYaml();
+              String declaredRuleId = semgrepScan.ruleId();
+              Path yamlPathToWrite = null;
+              boolean foundYaml = false;
+              if (!declaredRuleId.isEmpty()) {
+                String classpathYamlPath =
+                    "/" + packageName.replace(".", "/") + "/" + declaredRuleId + ".yaml";
 
-            try {
-              if (StringUtils.isEmpty(declaredRuleId)) {
-                String rawYaml = Files.readString(yamlPathToWrite);
-                declaredRuleId = detectSingleRuleFromYaml(rawYaml);
+                if (!"".equals(yamlPath)) {
+                  classpathYamlPath = yamlPath;
+                }
+                Optional<Path> path = saveClasspathResourceToTemp(classpathYamlPath);
+                if (path.isPresent()) {
+                  foundYaml = true;
+                  yamlPathToWrite = path.get();
+                }
               }
-            } catch (IOException e) {
-              throw new UncheckedIOException(
-                  "Problem inspecting yaml: " + codemodType.getName(), e);
-            }
+              String inlineYaml = semgrepScan.yaml();
+              if (!"".equals(inlineYaml)) {
+                if (foundYaml) {
+                  throw new IllegalArgumentException(
+                      "Cannot specify both inline yaml and yaml file path: "
+                          + codemodType.getName());
+                }
+                foundYaml = true;
+                yamlPathToWrite = saveStringToTemp(inlineYaml);
+              }
 
-            yamlPathsToRun.add(yamlPathToWrite);
+              if (!foundYaml) {
+                throw new IllegalArgumentException(
+                    "no semgrep yaml found for: " + codemodType.getName());
+              }
 
-            Pair<String, SemgrepScan> rulePair = Pair.of(declaredRuleId, semgrepScanAnnotation);
-            toBind.add(rulePair);
-          });
+              try {
+                if (StringUtils.isEmpty(declaredRuleId)) {
+                  String rawYaml = Files.readString(yamlPathToWrite);
+                  declaredRuleId = detectSingleRuleFromYaml(rawYaml);
+                }
+              } catch (IOException e) {
+                throw new UncheckedIOException(
+                    "Problem inspecting yaml: " + codemodType.getName(), e);
+              }
+
+              yamlPathsToRun.add(yamlPathToWrite);
+
+              Pair<String, SemgrepScan> rulePair = Pair.of(declaredRuleId, semgrepScan);
+
+              toBind.add(rulePair);
+            });
+
+        LOG.debug("Finished scanning codemod package: {}", packageName);
+        packagesScanned.add(packageName);
+      }
     }
 
     if (toBind.isEmpty()) {
@@ -147,10 +161,7 @@ final class SemgrepModule extends AbstractModule {
           yamlAsString += "\n    languages:\n      - java\n";
         }
         if (changed) {
-          Files.write(
-              yamlPath,
-              yamlAsString.getBytes(StandardCharsets.UTF_8),
-              StandardOpenOption.TRUNCATE_EXISTING);
+          Files.writeString(yamlPath, yamlAsString, StandardOpenOption.TRUNCATE_EXISTING);
         }
       } catch (IOException e) {
         throw new UncheckedIOException("Problem fixing up yaml", e);
@@ -193,7 +204,7 @@ final class SemgrepModule extends AbstractModule {
   private Path saveStringToTemp(final String yamlAsString) {
     try {
       Path file = Files.createTempFile("semgrep", ".yaml");
-      Files.write(file, yamlAsString.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(file, yamlAsString);
       return file;
     } catch (IOException e) {
       throw new UncheckedIOException("Problem saving yaml string to temp", e);
@@ -221,4 +232,6 @@ final class SemgrepModule extends AbstractModule {
       IOUtils.closeQuietly(ruleInputStream);
     }
   }
+
+  private static final Logger LOG = LoggerFactory.getLogger(SemgrepModule.class);
 }
